--- a/using/windows.po
+++ b/using/windows.po
@@ -1997,7 +1997,7 @@ msgid ""
 "`PYLAUNCHER_NO_SEARCH_PATH` may be set (to any value) to skip this search "
 "of :envvar:`PATH`."
 msgstr ""
-"La forma ``/usr/bin/env`` de la línea shebang tiene una propiedad especial "
+"La forma ``/usr/bin/env`` de la línea shebang tiene otra propiedad especial "
 "adicional. Antes de buscar intérpretes de Python instalados, esta forma "
 "buscará en el ejecutable :envvar:`PATH` un ejecutable de Python que coincida "
 "con el nombre proporcionado como primer argumento. Esto corresponde al "
