--- a/using/windows.po
+++ b/using/windows.po
@@ -1999,7 +1999,7 @@ msgid ""
 msgstr ""
 "La forma ``/usr/bin/env`` de la línea shebang tiene otra propiedad especial "
 "adicional. Antes de buscar intérpretes de Python instalados, esta forma "
-"buscará en el ejecutable :envvar:`PATH` un ejecutable de Python que coincida "
+"buscará en el :envvar:`PATH` de ejecución un ejecutable de Python que coincida "
 "con el nombre proporcionado como primer argumento. Esto corresponde al "
 "comportamiento del programa Unix ``env``, que realiza una búsqueda en :"
 "envvar:`PATH`. Si no se puede encontrar un ejecutable que coincida con el "
