--- a/using/windows.po
+++ b/using/windows.po
@@ -2019,7 +2019,7 @@ msgid ""
 "executable (additional arguments specified in the .INI will be quoted as "
 "part of the filename)."
 msgstr ""
-"Las líneas Shebang que no coincidan con ninguno de estos patrones se buscan "
+"Las líneas shebang que no coincidan con ninguno de estos patrones se buscan "
 "en la sección ``[commands]`` del :ref:`archivo .INI <launcher-ini>` del "
 "lanzador. Esto se puede usar para manejar ciertos comandos de una manera que "
 "tenga sentido para tu sistema. El nombre del comando debe ser un único "
