--- a/using/windows.po
+++ b/using/windows.po
@@ -1740,7 +1740,7 @@ msgid ""
 "following :pep:`514` will be discoverable. The ``--list`` command lists all "
 "available runtimes using the ``-V:`` format."
 msgstr ""
-"El argumento ``-x.y`` es la forma corta del argumento ``-V:Company/Tag``, "
+"El argumento ``-x.y`` es la forma corta del argumento ``-V:Compañía/Tag``, "
 "que permite seleccionar un entorno de ejecución Python específico, incluidos "
 "aquellos que pueden haber provenido de lugares diferentes a python.org. "
 "Cualquier entorno registrado siguiendo el :pep:`514` será detectable. El "
@@ -1999,9 +1999,9 @@ msgid ""
 msgstr ""
 "La forma ``/usr/bin/env`` de la línea shebang tiene otra propiedad especial "
 "adicional. Antes de buscar intérpretes de Python instalados, esta forma "
-"buscará en el :envvar:`PATH` de ejecución un ejecutable de Python que coincida "
-"con el nombre proporcionado como primer argumento. Esto corresponde al "
-"comportamiento del programa Unix ``env``, que realiza una búsqueda en :"
+"buscará en el :envvar:`PATH` de ejecución un ejecutable de Python que "
+"coincida con el nombre proporcionado como primer argumento. Esto corresponde "
+"al comportamiento del programa Unix ``env``, que realiza una búsqueda en :"
 "envvar:`PATH`. Si no se puede encontrar un ejecutable que coincida con el "
 "primer argumento después del comando ``env`` pero el argumento comienza con "
 "``python``, será manejado como se describe para los otros comandos "
