--- a/using/windows.po
+++ b/using/windows.po
@@ -1740,12 +1740,12 @@ msgid ""
 "following :pep:`514` will be discoverable. The ``--list`` command lists all "
 "available runtimes using the ``-V:`` format."
 msgstr ""
-"El argumento ``-x.y`` es la forma corta del argumento ``-V:Compañía/Tag``, "
-"que permite seleccionar un entorno de ejecución Python específico, incluidos "
-"aquellos que pueden haber provenido de lugares diferentes a python.org. "
-"Cualquier entorno registrado siguiendo el :pep:`514` será detectable. El "
-"comando ``--list`` muestra todos los entornos disponibles usando el formato "
-"``-V:``."
+"El argumento ``-x.y`` es la forma corta del argumento ``-V:Compañía/"
+"Etiqueta``, que permite seleccionar un entorno de ejecución Python "
+"específico, incluidos aquellos que pueden haber provenido de lugares "
+"diferentes a python.org. Cualquier entorno registrado siguiendo el :pep:"
+"`514` será detectable. El comando ``--list`` muestra todos los entornos "
+"disponibles usando el formato ``-V:``."
 
 #: ../Doc/using/windows.rst:763
 msgid ""
