--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -4568,7 +4568,7 @@ msgid ""
 "PyUnicode_AsUnicodeAndSize`: use :c:func:`PyUnicode_AsWideCharString`"
 msgstr ""
 ":c:macro:`!PyUnicode_AS_UNICODE`, :c:func:`!PyUnicode_AsUnicode`, :c:func:`!"
-"PyUnicode_AsUnicodeAndSize`: usa :c:func:`PyUnicode_AsWideCharString`"
+"PyUnicode_AsUnicodeAndSize`: use :c:func:`PyUnicode_AsWideCharString`"
 
 #: ../Doc/whatsnew/3.3.rst:2277
 msgid ""
