--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -336,7 +336,7 @@ msgid ""
 "used to obtain individual characters, *slicing* allows you to obtain a "
 "substring::"
 msgstr ""
-"Además de los índices, las *rebanadas (slicing) también están soportadas. "
+"Además de los índices, las *rebanadas* (slicing) también están soportadas. "
 "Mientras que la indexación se utiliza para obtener caracteres individuales, "
 "*rebanar* te permite obtener una subcadena::"
 
