--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -3020,7 +3020,7 @@ msgid ""
 "has been deprecated. (Contributed by Donghee Na in :issue:`35283`.)"
 msgstr ""
 "El método :meth:`~threading.Thread.isAlive()` de la clase :class:`threading."
-"Thread` está ahora obsoleto. (Contribución de Dong-hee Na en :issue:`35283`.)"
+"Thread` está ahora obsoleto. (Contribución de Donghee Na en :issue:`35283`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1719
 msgid ""
