translate tutorial/introduction.po (#2674)
closes #2403

--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -8,18 +8,19 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Python 3.8\n"
+"Project-Id-Version: Python 3.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2022-11-12 19:40-0300\n"
+"PO-Revision-Date: 2023-10-15 20:19-0300\n"
 "Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/tutorial/introduction.rst:5
 msgid "An Informal Introduction to Python"
@@ -94,18 +95,17 @@ msgid "Numbers"
 msgstr "Números"
 
 #: ../Doc/tutorial/introduction.rst:53
-#, fuzzy
 msgid ""
 "The interpreter acts as a simple calculator: you can type an expression at "
 "it and it will write the value.  Expression syntax is straightforward: the "
 "operators ``+``, ``-``, ``*`` and ``/`` can be used to perform arithmetic; "
 "parentheses (``()``) can be used for grouping. For example::"
 msgstr ""
-"El intérprete puede utilizarse como una simple calculadora; puedes "
-"introducir una expresión en él y este escribirá los valores. La sintaxis es "
-"sencilla: los operadores ``+``, ``-``, ``*`` y ``/`` funcionan como en la "
-"mayoría de los lenguajes (por ejemplo, Pascal o C); los paréntesis (``()``) "
-"pueden ser usados para agrupar. Por ejemplo::"
+"El intérprete funciona como una simple calculadora: puedes introducir una "
+"expresión en él y este escribirá los valores. La sintaxis es sencilla: los "
+"operadores ``+``, ``-``, ``*`` y ``/`` se pueden usar para realizar "
+"operaciones aritméticas; los paréntesis (``()``) pueden ser usados para "
+"agrupar. Por ejemplo::"
 
 #: ../Doc/tutorial/introduction.rst:68
 msgid ""
@@ -195,7 +195,7 @@ msgstr ""
 
 #: ../Doc/tutorial/introduction.rst:142
 msgid "Text"
-msgstr ""
+msgstr "Texto"
 
 #: ../Doc/tutorial/introduction.rst:144
 msgid ""
@@ -205,12 +205,20 @@ msgid ""
 "\"``Yay! :)``\". They can be enclosed in single quotes (``'...'``) or double "
 "quotes (``\"...\"``) with the same result [#]_."
 msgstr ""
+"Python puede manipular texto (representado por el tipo :class:`str`, "
+"conocido como \"cadenas de caracteres\") al igual que números. Esto incluye "
+"caracteres \"``!``\", palabras \"``conejo``\", nombres \"``París``\", "
+"oraciones \"``¡Te tengo a la vista!``\", etc. \"``Yay! :)``\". Se pueden "
+"encerrar en comillas simples (``'...'``) o comillas dobles (``\"...\"``) con "
+"el mismo resultado [#]_."
 
 #: ../Doc/tutorial/introduction.rst:157
 msgid ""
 "To quote a quote, we need to \"escape\" it, by preceding it with ``\\``. "
 "Alternatively, we can use the other type of quotation marks::"
 msgstr ""
+"Para citar una cita, debemos \"escapar\" la cita precediéndola con ``\\``. "
+"Alternativamente, podemos usar el otro tipo de comillas::"
 
 #: ../Doc/tutorial/introduction.rst:171
 msgid ""
@@ -219,6 +227,10 @@ msgid ""
 "omitting the enclosing quotes and by printing escaped and special "
 "characters::"
 msgstr ""
+"En el intérprete de Python, la definición de cadena y la cadena de salida "
+"pueden verse diferentes. La función :func:`print` produce una salida más "
+"legible, omitiendo las comillas de encuadre e imprimiendo caracteres "
+"escapados y especiales::"
 
 #: ../Doc/tutorial/introduction.rst:182
 msgid ""
@@ -236,6 +248,10 @@ msgid ""
 "odd number of ``\\`` characters; see :ref:`the FAQ entry <faq-programming-"
 "raw-string-backslash>` for more information and workarounds."
 msgstr ""
+"Hay un aspecto sutil en las cadenas sin formato: una cadena sin formato no "
+"puede terminar en un número impar de caracteres ``\\``; consultar :ref:`en "
+"preguntas frequentes <faq-programming-raw-string-backslash>` para obtener "
+"más información y soluciones."
 
 #: ../Doc/tutorial/introduction.rst:197
 msgid ""
@@ -315,15 +331,14 @@ msgstr ""
 "Nótese que -0 es lo mismo que 0, los índice negativos comienzan desde -1."
 
 #: ../Doc/tutorial/introduction.rst:276
-#, fuzzy
 msgid ""
 "In addition to indexing, *slicing* is also supported.  While indexing is "
 "used to obtain individual characters, *slicing* allows you to obtain a "
 "substring::"
 msgstr ""
-"Además de los índices, las *rebanadas* también están soportadas. Mientras "
-"que los índices se utilizar para obtener caracteres individuales, las "
-"*rebanadas* te permiten obtener partes de las cadenas de texto::"
+"Además de los índices, las *rebanadas* (slicing) también están soportadas. "
+"Mientras que la indexación se utiliza para obtener caracteres individuales, "
+"*rebanar* te permite obtener una subcadena::"
 
 #: ../Doc/tutorial/introduction.rst:284
 msgid ""
@@ -662,42 +677,8 @@ msgstr ""
 
 #: ../Doc/tutorial/introduction.rst:21
 msgid "# (hash)"
-msgstr ""
+msgstr "# (hash)"
 
 #: ../Doc/tutorial/introduction.rst:21
 msgid "comment"
-msgstr ""
-
-#~ msgid "Strings"
-#~ msgstr "Cadenas de caracteres"
-
-#~ msgid ""
-#~ "Besides numbers, Python can also manipulate strings, which can be "
-#~ "expressed in several ways.  They can be enclosed in single quotes "
-#~ "(``'...'``) or double quotes (``\"...\"``) with the same result [#]_.  "
-#~ "``\\`` can be used to escape quotes::"
-#~ msgstr ""
-#~ "Además de números, Python puede manipular cadenas de texto, las cuales "
-#~ "pueden ser expresadas de distintas formas. Pueden estar encerradas en "
-#~ "comillas simples (``'...'``) o dobles (``\"...\"``)  con el mismo "
-#~ "resultado [#]_.  ``\\`` puede ser usado para escapar comillas::"
-
-#~ msgid ""
-#~ "In the interactive interpreter, the output string is enclosed in quotes "
-#~ "and special characters are escaped with backslashes.  While this might "
-#~ "sometimes look different from the input (the enclosing quotes could "
-#~ "change), the two strings are equivalent.  The string is enclosed in "
-#~ "double quotes if the string contains a single quote and no double quotes, "
-#~ "otherwise it is enclosed in single quotes.  The :func:`print` function "
-#~ "produces a more readable output, by omitting the enclosing quotes and by "
-#~ "printing escaped and special characters::"
-#~ msgstr ""
-#~ "En el intérprete interactivo, la salida de caracteres está encerrada en "
-#~ "comillas y los caracteres especiales se escapan con barras invertidas. "
-#~ "Aunque esto a veces se vea diferente de la entrada (las comillas que "
-#~ "encierran pueden cambiar), las dos cadenas son equivalentes. La cadena se "
-#~ "encierra en comillas dobles si la cadena contiene una comilla simple y "
-#~ "ninguna doble, de lo contrario es encerrada en comillas simples. La "
-#~ "función :func:`print` produce una salida más legible, omitiendo las "
-#~ "comillas que la encierran e imprimiendo caracteres especiales y "
-#~ "escapados::"
+msgstr "comentario"
