traduccion tutorial/stdlib v3.12

--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-10-16 11:45-0500\n"
+"PO-Revision-Date: 2023-10-17 11:16-0500\n"
 "Last-Translator: \n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -45,7 +45,7 @@ msgid ""
 "function which operates much differently."
 msgstr ""
 "Asegúrate de utilizar el estilo ``import os`` en lugar de ``from os import "
-"*``. Esto evitará que :func:`os.open` oculte a la función integrada :func:"
+"*``. Esto evitará que :func:`os.open` oculte la función integrada :func:"
 "`open`, que funciona de manera muy diferente."
 
 #: ../Doc/tutorial/stdlib.rst:29
