Apply suggestions from code review
Co-authored-by: Marcos Medrano <786907+mmmarcos@users.noreply.github.com>

--- a/whatsnew/3.11.po
+++ b/whatsnew/3.11.po
@@ -335,7 +335,7 @@ msgid ""
 "checking the runtime's tag for a ``-32`` suffix. All releases of Python "
 "since 3.5 have included this in their 32-bit builds."
 msgstr ""
-"Cuando se utiliza el legado :samp:`-{<principal>}`, :samp:`-{<principal>}."
+"Cuando se utilizan los argumentos obsoletos :samp:`-{<principal>}`, :samp:`-{<principal>}."
 "{<menor>}`, :samp:`-{<principal>}-{<bitness>} ` o :samp:`-{<principal>}."
 "{<menor>}-{<bitness>}`, se debe conservar todo el comportamiento existente "
 "de las versiones anteriores y solo se seleccionarán las versiones de "
@@ -653,13 +653,13 @@ msgid ""
 "such code may need. (Contributed by Serhiy Storchaka in :issue:`26579`.)"
 msgstr ""
 "Se agregó :meth:`object.__getstate__`, que proporciona la implementación "
-"predeterminada del método :meth:`!__getstate__`. :mod:`copy`\\ing y :mod:"
-"`pickle`\\ing instancias de subclases de tipos integrados :class:"
+"predeterminada del método :meth:`!__getstate__`. :mod:`copy`\\ando y :mod:"
+"`pickle`\\ando instancias de subclases de tipos integrados :class:"
 "`bytearray`, :class:`set`, :class:`frozenset`, :class:`collections."
 "OrderedDict`, :class:`collections.deque`, :class:`weakref.WeakSet` y :class:"
 "`datetime.tzinfo` ahora copian y seleccionan atributos de instancia "
 "implementados como :term:`slots <__slots__>`. Este cambio tiene un efecto "
-"secundario no deseado: hace tropezar a una pequeña minoría de proyectos "
+"secundario no deseado: hace fallar a una pequeña minoría de proyectos "
 "Python existentes que no esperaban que existiera :meth:`object."
 "__getstate__`. Consulte los comentarios posteriores sobre :gh:`70766` para "
 "obtener información sobre las soluciones alternativas que dicho código puede "
@@ -1643,7 +1643,7 @@ msgid ""
 msgstr ""
 ":func:`sys.exc_info` ahora deriva los campos ``type`` y ``traceback`` de "
 "``value`` (la instancia de excepción), de modo que cuando se modifica una "
-"excepción mientras se está manejando, los cambios se reflejan en los "
+"excepción mientras se está manipulando, los cambios se reflejan en los "
 "resultados de llamadas posteriores a :func:`!exc_info`. (Aportado por Irit "
 "Katriel en :issue:`45711`.)"
 
@@ -1730,7 +1730,7 @@ msgstr ""
 "usa el reloj monótono (:const:`time.CLOCK_MONOTONIC`) para el tiempo de "
 "espera, en lugar de usar el reloj del sistema (:const:`time."
 "CLOCK_REALTIME`), para no verse afectado por cambios de reloj del sistema. "
-"(Aportado por Victor Stinner en :issue:`41710`.)"
+"(Contribución de Victor Stinner en :issue:`41710`.)"
 
 #: ../Doc/whatsnew/3.11.rst:1079
 msgid "time"
@@ -2186,7 +2186,7 @@ msgid ""
 "time. (Contributed by Donghee Na in :issue:`44987`.)"
 msgstr ""
 ":func:`unicodedata.normalize` ahora normaliza cadenas ASCII puras en tiempo "
-"constante. (Aportado por Donghee Na en :issue:`44987`.)"
+"constante. (Contribución de Donghee Na en :issue:`44987`.)"
 
 #: ../Doc/whatsnew/3.11.rst:1314
 msgid "Faster CPython"
@@ -2247,7 +2247,7 @@ msgid ""
 msgstr ""
 "En Python 3.11, los módulos principales esenciales para el inicio de Python "
 "están \"congelados\". Esto significa que el intérprete asigna estáticamente "
-"su :ref:`codeobjects` (y su código de bytes). Esto reduce los pasos en el "
+"sus :ref:`codeobjects` (y sus códigos de bytes). Esto reduce los pasos en el "
 "proceso de ejecución del módulo a:"
 
 #: ../Doc/whatsnew/3.11.rst:1357
@@ -2281,7 +2281,7 @@ msgid ""
 msgstr ""
 "Los marcos de Python, que contienen información de ejecución, se crean cada "
 "vez que Python llama a una función de Python. Las siguientes son nuevas "
-"optimizaciones de cuadros:"
+"optimizaciones de marcos:"
 
 #: ../Doc/whatsnew/3.11.rst:1377
 msgid "Streamlined the frame creation process."
@@ -2318,8 +2318,7 @@ msgstr ""
 "Python como :func:`sys._getframe` y :func:`inspect.currentframe`. Para la "
 "mayoría del código de usuario, no se crea ningún objeto de marco. Como "
 "resultado, casi todas las llamadas a funciones de Python se han acelerado "
-"significativamente. Medimos una aceleración del 3 al 7% en el rendimiento de "
-"py."
+"significativamente. Medimos una aceleración del 3 al 7% en pyperformance."
 
 #: ../Doc/whatsnew/3.11.rst:1389
 msgid "(Contributed by Mark Shannon in :issue:`44590`.)"
@@ -2365,8 +2364,7 @@ msgstr ""
 "Fibonacci o factorial, observamos una aceleración de 1,7 veces. Esto también "
 "significa que las funciones recursivas pueden recurrir significativamente "
 "más profundamente (si el usuario aumenta el límite de recursividad con :func:"
-"`sys.setrecursionlimit`). Medimos una mejora del 1 al 3% en el rendimiento "
-"de py."
+"`sys.setrecursionlimit`). Medimos una mejora del 1 al 3% en pyperformance."
 
 #: ../Doc/whatsnew/3.11.rst:1413
 msgid "(Contributed by Pablo Galindo and Mark Shannon in :issue:`45256`.)"
@@ -2733,7 +2731,7 @@ msgid ""
 msgstr ""
 "Se implementan excepciones de \"costo cero\", lo que elimina el costo de las "
 "declaraciones :keyword:`try` cuando no se plantea ninguna excepción. "
-"(Aportado por Mark Shannon en :issue:`40222`.)"
+"(Contribución de Mark Shannon en :issue:`40222`.)"
 
 #: ../Doc/whatsnew/3.11.rst:1517
 msgid ""
@@ -2760,7 +2758,7 @@ msgstr ""
 "subprocesos\") en las plataformas compatibles. Como resultado, Python 3.11 "
 "ejecuta `pyperformance regular expression benchmarks <https://pyperformance."
 "readthedocs.io/benchmarks.html#regex-dna>`_ hasta un 10% más rápido que "
-"Python 3.10. (Aportado por Brandt Bucher en :gh:`91404`.)"
+"Python 3.10. (Contribución de Brandt Bucher en :gh:`91404`.)"
 
 #: ../Doc/whatsnew/3.11.rst:1532
 msgid "FAQ"
@@ -2776,7 +2774,7 @@ msgid ""
 "change your code. The Faster CPython project optimizes for common code "
 "patterns we observe."
 msgstr ""
-"No tienes que cambiar tu código. Escriba código Pythonic que siga las "
+"No tienes que cambiar tu código, escribe código Pythonic que siga las "
 "mejores prácticas comunes. El proyecto Faster CPython optimiza los patrones "
 "de código comunes que observamos."
 
@@ -3304,7 +3302,7 @@ msgstr ""
 "Los módulos :mod:`asynchat`, :mod:`asyncore` y :mod:`smtpd` han quedado "
 "obsoletos desde al menos Python 3.6. Su documentación y advertencias de "
 "obsolescencia ahora se han actualizado para tener en cuenta que se "
-"eliminarán en Python 3.12. (Aportado por Hugo van Kemenade en :issue:"
+"eliminarán en Python 3.12. (Contribución de Hugo van Kemenade en :issue:"
 "`47022`.)"
 
 #: ../Doc/whatsnew/3.11.rst:1755
@@ -3514,7 +3512,7 @@ msgid ""
 msgstr ""
 ":class:`!webbrowser.MacOSX` está en desuso y se eliminará en Python 3.13. No "
 "está probado, no está documentado y no lo utiliza el propio :mod:"
-"`webbrowser`. (Aportado por Donghee Na en :issue:`42255`.)"
+"`webbrowser`. (Contribución de Donghee Na en :issue:`42255`.)"
 
 #: ../Doc/whatsnew/3.11.rst:1844
 msgid ""
@@ -3572,7 +3570,7 @@ msgid ""
 "in 3.13. (Contributed by Carlos Damázio in :gh:`67048`.)"
 msgstr ""
 ":meth:`~!unittest.TestProgram.usageExit` está marcado como obsoleto y se "
-"eliminará en 3.13. (Aportado por Carlos Damázio en :gh:`67048`.)"
+"eliminará en 3.13. (Contribución de Carlos Damázio en :gh:`67048`.)"
 
 #: ../Doc/whatsnew/3.11.rst:1872 ../Doc/whatsnew/3.11.rst:2593
 msgid "Pending Removal in Python 3.12"
@@ -3724,7 +3722,7 @@ msgstr "Nombre del método"
 
 #: ../Doc/whatsnew/3.11.rst:1912
 msgid "Deprecated in"
-msgstr "Deprecado en"
+msgstr "Obsoleto en"
 
 #: ../Doc/whatsnew/3.11.rst:1914
 msgid "``failUnless``"
@@ -4026,7 +4024,7 @@ msgid ""
 "Donghee Na in :issue:`35800`.)"
 msgstr ""
 "Se eliminó la clase :class:`!MailmanProxy` en el módulo :mod:`smtpd`, ya que "
-"no se puede utilizar sin el paquete externo :mod:`!mailman`. (Aportado por "
+"no se puede utilizar sin el paquete externo :mod:`!mailman`. (Contribución de "
 "Donghee Na en :issue:`35800`.)"
 
 #: ../Doc/whatsnew/3.11.rst:2014
@@ -4280,7 +4278,7 @@ msgid ""
 msgstr ""
 "La macro :c:macro:`!Py_NO_NAN` ha sido eliminada. Dado que CPython ahora "
 "requiere flotantes IEEE 754, los valores NaN siempre están disponibles. "
-"(Aportado por Victor Stinner en :issue:`46656`.)"
+"(Contribución de Victor Stinner en :issue:`46656`.)"
 
 #: ../Doc/whatsnew/3.11.rst:2134
 msgid ""
