--- a/whatsnew/3.11.po
+++ b/whatsnew/3.11.po
@@ -335,16 +335,16 @@ msgid ""
 "checking the runtime's tag for a ``-32`` suffix. All releases of Python "
 "since 3.5 have included this in their 32-bit builds."
 msgstr ""
-"Cuando se utilizan los argumentos obsoletos :samp:`-{<principal>}`, :samp:`-{<principal>}."
-"{<menor>}`, :samp:`-{<principal>}-{<bitness>} ` o :samp:`-{<principal>}."
-"{<menor>}-{<bitness>}`, se debe conservar todo el comportamiento existente "
-"de las versiones anteriores y solo se seleccionarán las versiones de "
-"``PythonCore``. Sin embargo, el sufijo ``-64`` ahora implica \"no de 32 "
-"bits\" (no necesariamente x86-64), ya que existen múltiples plataformas de "
-"64 bits compatibles. Los tiempos de ejecución de 32 bits se detectan "
-"comprobando la etiqueta del tiempo de ejecución en busca de un sufijo "
-"``-32``. Todas las versiones de Python desde la 3.5 han incluido esto en sus "
-"versiones de 32 bits."
+"Cuando se utilizan los argumentos obsoletos :samp:`-{<principal>}`, :samp:`-"
+"{<principal>}.{<menor>}`, :samp:`-{<principal>}-{<bitness>} ` o :samp:`-"
+"{<principal>}.{<menor>}-{<bitness>}`, se debe conservar todo el "
+"comportamiento existente de las versiones anteriores y solo se seleccionarán "
+"las versiones de ``PythonCore``. Sin embargo, el sufijo ``-64`` ahora "
+"implica \"no de 32 bits\" (no necesariamente x86-64), ya que existen "
+"múltiples plataformas de 64 bits compatibles. Los tiempos de ejecución de 32 "
+"bits se detectan comprobando la etiqueta del tiempo de ejecución en busca de "
+"un sufijo ``-32``. Todas las versiones de Python desde la 3.5 han incluido "
+"esto en sus versiones de 32 bits."
 
 #: ../Doc/whatsnew/3.11.rst:244
 msgid "New Features Related to Type Hints"
@@ -659,10 +659,10 @@ msgstr ""
 "OrderedDict`, :class:`collections.deque`, :class:`weakref.WeakSet` y :class:"
 "`datetime.tzinfo` ahora copian y seleccionan atributos de instancia "
 "implementados como :term:`slots <__slots__>`. Este cambio tiene un efecto "
-"secundario no deseado: hace fallar a una pequeña minoría de proyectos "
-"Python existentes que no esperaban que existiera :meth:`object."
-"__getstate__`. Consulte los comentarios posteriores sobre :gh:`70766` para "
-"obtener información sobre las soluciones alternativas que dicho código puede "
+"secundario no deseado: hace fallar a una pequeña minoría de proyectos Python "
+"existentes que no esperaban que existiera :meth:`object.__getstate__`. "
+"Consulte los comentarios posteriores sobre :gh:`70766` para obtener "
+"información sobre las soluciones alternativas que dicho código puede "
 "necesitar. (Aportado por Serhiy Storchaka en :issue:`26579`.)"
 
 #: ../Doc/whatsnew/3.11.rst:470
@@ -4024,8 +4024,8 @@ msgid ""
 "Donghee Na in :issue:`35800`.)"
 msgstr ""
 "Se eliminó la clase :class:`!MailmanProxy` en el módulo :mod:`smtpd`, ya que "
-"no se puede utilizar sin el paquete externo :mod:`!mailman`. (Contribución de "
-"Donghee Na en :issue:`35800`.)"
+"no se puede utilizar sin el paquete externo :mod:`!mailman`. (Contribución "
+"de Donghee Na en :issue:`35800`.)"
 
 #: ../Doc/whatsnew/3.11.rst:2014
 msgid ""
