Fix english word in pep link

--- a/whatsnew/3.12.po
+++ b/whatsnew/3.12.po
@@ -582,7 +582,7 @@ msgstr ""
 "intérprete, de modo que ahora se pueden crear subintérpretes con un GIL "
 "único por intérprete. Esto permite que los programas Python aprovechen al "
 "máximo múltiples núcleos de CPU. Actualmente, esto solo está disponible a "
-"través de C-API, aunque una API de Python es :pep:`anticipated for 3.13 "
+"través de C-API, aunque una API de Python es :pep:`anticipada para 3.13 "
 "<554>`."
 
 #: ../Doc/whatsnew/3.12.rst:345
