Traducido archivo `howto/annotations.po`

--- a/howto/annotations.po
+++ b/howto/annotations.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2021-10-21 04:10-0500\n"
+"PO-Revision-Date: 2023-10-17 22:46-0500\n"
 "Last-Translator: José Luis Salgado Banda <josephLSalgado@outlook.com>\n"
 "Language: es\n"
 "Language-Team: \n"
@@ -134,6 +134,10 @@ msgid ""
 "parent's ``__annotations__``. In Python 3.10 and newer, the child class's "
 "annotations will be an empty dict instead."
 msgstr ""
+"Antes de Python 3.10, acceder a ``__annotations__`` en una clase que no "
+"define anotaciones pero que tiene una clase padre con anotaciones devolvería "
+"las anotaciones de la clase padre. En Python 3.10 y versiones posteriores, "
+"las anotaciones de la clase hija serán un diccionario vacío en su lugar."
 
 #: ../Doc/howto/annotations.rst:68
 msgid "Accessing The Annotations Dict Of An Object In Python 3.9 And Older"
@@ -323,13 +327,12 @@ msgstr ""
 "específicamente. Por ejemplo:"
 
 #: ../Doc/howto/annotations.rst:165
-#, fuzzy
 msgid ""
 ":pep:`604` union types using ``|``, before support for this was added to "
 "Python 3.10."
 msgstr ""
-":pep:`604` tipos de unión usando `|`, antes de que se agregara soporte para "
-"esto en Python 3.10."
+":pep:`604` introduce tipos de unión usando ``|``, antes de que se agregara "
+"soporte para esto en Python 3.10."
 
 #: ../Doc/howto/annotations.rst:167
 msgid ""
