--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-02-04 16:01-0300\n"
+"PO-Revision-Date: 2023-10-18 10:24-0300\n"
 "Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/tutorial/inputoutput.rst:5
 msgid "Input and Output"
@@ -41,7 +42,6 @@ msgid "Fancier Output Formatting"
 msgstr "Formateo elegante de la salida"
 
 #: ../Doc/tutorial/inputoutput.rst:17
-#, fuzzy
 msgid ""
 "So far we've encountered two ways of writing values: *expression statements* "
 "and the :func:`print` function.  (A third way is using the :meth:`~io."
@@ -50,10 +50,10 @@ msgid ""
 "on this.)"
 msgstr ""
 "Hasta ahora encontramos dos maneras de escribir valores: *declaraciones de "
-"expresión* y la función :func:`print`.  (Una tercera manera es usando el "
-"método :meth:`write` de los objetos tipo archivo; el archivo de salida "
-"estándar puede referenciarse como ``sys.stdout``.  Mirá la Referencia de la "
-"Biblioteca para más información sobre esto)."
+"expresión* y la función :func:`print`. (Una tercera manera es usando el "
+"método :meth:`~io.TextIOBase.write` de los objetos tipo archivo; el archivo "
+"de salida estándar puede referenciarse como ``sys.stdout``. Mirá la "
+"Referencia de la Biblioteca para más información sobre esto)."
 
 #: ../Doc/tutorial/inputoutput.rst:22
 msgid ""
@@ -376,7 +376,7 @@ msgid ""
 msgstr ""
 "La función :func:`open` retorna un :term:`file object`, y se usa normalmente "
 "con dos argumentos posicionales y un argumento nombrado: "
-"``open(nombre_de_archivo, modo, encoding=None)``."
+"``open(nombre_de_archivo, modo, encoding=None)``"
 
 #: ../Doc/tutorial/inputoutput.rst:304
 msgid ""
@@ -610,22 +610,21 @@ msgstr ""
 "comportamiento indefinido."
 
 #: ../Doc/tutorial/inputoutput.rst:459
-#, fuzzy
 msgid ""
 "File objects have some additional methods, such as :meth:`~io.IOBase.isatty` "
 "and :meth:`~io.IOBase.truncate` which are less frequently used; consult the "
 "Library Reference for a complete guide to file objects."
 msgstr ""
-"Los objetos archivo tienen algunos métodos más, como :meth:`isatty` y :meth:"
-"`truncate` que son usados menos frecuentemente; consultá la Referencia de la "
-"Biblioteca para una guía completa sobre los objetos archivo."
+"Los objetos archivo tienen algunos métodos más, como :meth:`~io.IOBase."
+"isatty` y :meth:`~io.IOBase.truncate` que son usados menos frecuentemente; "
+"consultá la Referencia de la Biblioteca para una guía completa sobre los "
+"objetos archivo."
 
 #: ../Doc/tutorial/inputoutput.rst:467
 msgid "Saving structured data with :mod:`json`"
 msgstr "Guardar datos estructurados con :mod:`json`"
 
 #: ../Doc/tutorial/inputoutput.rst:471
-#, fuzzy
 msgid ""
 "Strings can easily be written to and read from a file.  Numbers take a bit "
 "more effort, since the :meth:`~io.TextIOBase.read` method only returns "
@@ -635,10 +634,10 @@ msgid ""
 "parsing and serializing by hand becomes complicated."
 msgstr ""
 "Las cadenas pueden fácilmente escribirse y leerse de un archivo. Los números "
-"toman algo más de esfuerzo, ya que el método :meth:`read` sólo retorna "
-"cadenas, que tendrán que ser pasadas a una función como :func:`int`, que "
-"toma una cadena como ``'123'`` y retorna su valor numérico 123. Sin embargo, "
-"cuando querés guardar tipos de datos más complejos como listas, "
+"toman algo más de esfuerzo, ya que el método :meth:`~io.TextIOBase.read` "
+"sólo retorna cadenas, que tendrán que ser pasadas a una función como :func:"
+"`int`, que toma una cadena como ``'123'`` y retorna su valor numérico 123. "
+"Sin embargo, cuando querés guardar tipos de datos más complejos como listas, "
 "diccionarios, o instancias de clases, las cosas se ponen más complicadas."
 
 #: ../Doc/tutorial/inputoutput.rst:478
@@ -745,24 +744,24 @@ msgstr ""
 
 #: ../Doc/tutorial/inputoutput.rst:287
 msgid "built-in function"
-msgstr ""
+msgstr "función incorporada"
 
 #: ../Doc/tutorial/inputoutput.rst:287
 msgid "open"
-msgstr ""
+msgstr "abrir"
 
 #: ../Doc/tutorial/inputoutput.rst:287
 msgid "object"
-msgstr ""
+msgstr "objeto"
 
 #: ../Doc/tutorial/inputoutput.rst:287
 msgid "file"
-msgstr ""
+msgstr "archivo"
 
 #: ../Doc/tutorial/inputoutput.rst:469
 msgid "module"
-msgstr ""
+msgstr "módulo"
 
 #: ../Doc/tutorial/inputoutput.rst:469
 msgid "json"
-msgstr ""
+msgstr "json"
