--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-10-17 11:16-0500\n"
+"PO-Revision-Date: 2023-10-18 14:28-0500\n"
 "Last-Translator: \n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -88,9 +88,9 @@ msgid ""
 "For instance, let's take the following :file:`demo.py` file::"
 msgstr ""
 "Los programas frecuentemente necesitan procesar argumentos de linea de "
-"órdenes. Estos argumentos se almacenan en el atributo *argv* del módulo :mod:"
-"`sys` como una lista.  Por ejemplo, la siguiente salida resulta de ejecutar "
-"``python demo.py uno dos tres`` en la línea de órdenes::"
+"comandos. Estos argumentos se almacenan en el atributo *argv* del módulo :"
+"mod:`sys` como una lista.   Por ejemplo, consideremos el siguiente archivo :"
+"file: 'demo.py'::"
 
 #: ../Doc/tutorial/stdlib.rst:74
 msgid ""
@@ -122,7 +122,7 @@ msgstr ""
 
 #: ../Doc/tutorial/stdlib.rst:101
 msgid "Error Output Redirection and Program Termination"
-msgstr "Desvío de error de salida y Terminación del Programa"
+msgstr "Redirigir la salida de error y finalización del programa"
 
 #: ../Doc/tutorial/stdlib.rst:103
 msgid ""
