--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2023-10-18 14:28-0500\n"
+"PO-Revision-Date: 2023-10-18 14:55-0500\n"
 "Last-Translator: \n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -392,9 +392,8 @@ msgid ""
 "slightly nonstandard SQL syntax."
 msgstr ""
 "El módulo :mod:`sqlite3` es un wrapper de la biblioteca de bases de datos "
-"SQLite, que proporciona una base de datos constante que se puede actualizar "
-"y a la que se puede acceder utilizando una sintaxis SQL ligeramente no "
-"estándar."
+"SQLite, proporciona una base de datos constante que se puede actualizar y a "
+"la que se puede acceder utilizando una sintaxis SQL ligeramente no estándar."
 
 #: ../Doc/tutorial/stdlib.rst:357
 msgid ""
