Corrigiendo forma como es indicado una opción en el cmdline

--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -1521,7 +1521,7 @@ msgid ""
 msgstr ""
 "Si esta variable de entorno se establece en una cadena no vacía, Python "
 "mostrará cuánto tiempo tarda cada importación. Esto equivale exactamente a "
-"establecer ``-X importtime`` en la línea de comandos."
+"establecer :option:`-X` ``importtime`` en la línea de comandos."
 
 #: ../Doc/using/cmdline.rst:885
 msgid ""
